--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="refresh" content="0;url=https://rensoraa.github.io/Prestige-100" />
+  <meta http-equiv="refresh" content="0;url=https://rensoraa.github.io/Prestige-100/" />
   <title>Redirecting…</title>
 
   <script>
-    // Immediate redirect (no back history)
-    location.replace("https://rensoraa.github.io/p100");
+    // Instant redirect, no history
+    location.replace("https://rensoraa.github.io/Prestige-100/");
 
-    // Fallback in case replace is blocked
+    // Fallback
     setTimeout(() => {
-      location.href = "https://rensoraa.github.io/p100";
+      location.href = "https://rensoraa.github.io/Prestige-100/";
     }, 50);
   </script>
 
   <noscript>
-    <meta http-equiv="refresh" content="0;url=https://rensoraa.github.io/Prestige-100" />
+    <meta http-equiv="refresh" content="0;url=https://rensoraa.github.io/Prestige-100/" />
   </noscript>
 </head>
 <body></body>
